--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   bloc: ^8.1.1
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -19,6 +20,7 @@ dependencies:
   flutter_svg: ^2.0.2
   flutter_switch: ^0.3.2
   image_picker: ^0.8.7
+  internet_connection_checker: ^1.0.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
