--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,18 @@ environment:
   sdk: ">=2.19.2 <3.0.0"
 
 dependencies:
-  bloc: ^8.1.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_screenutil: ^5.6.1
+  flutter_bloc: ^8.1.2
+  flutter_screenutil: ^5.8.4
   flutter_svg: ^2.0.2
   flutter_switch: ^0.3.2
   image_picker: ^0.8.7
   internet_connection_checker: ^1.0.0+1
+  top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
